Corrected the header alignment and added new title and icon to app

--- a/src/Style/Header.css
+++ b/src/Style/Header.css
@@ -74,7 +74,7 @@
   font-style: normal;
   line-height: 1.52;
   letter-spacing: normal;
-  margin-right: 200px;
+  margin-right: 100px;
 }
 .Ellipse-2 {
   width: 62px;
